# AgentPayments

./: .gitignore  AGENTS.md  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Notes.md  README.md  SECURITY.md  TODO.md  bot-visitor.js  bot-wallet.json  db.sqlite3  demo.py  index.html  manage.py  netlify.toml  package-lock.json  package.json  requirements.txt  robots.txt  setup-wallet.js  test_payment.py  verify_payment.py
.well-known/: agent-access.json
agentpayments/: asgi.py  settings.py  urls.py  wsgi.py
backend/: .env.example  requirements.txt
cloudflare_deployment/: README.md  wrangler.toml
django_deployment/: DEPLOY_ORACLE.md  requirements.txt
jsons/: wallet-keys.json
llm_wallet_hub/: .env.example  README.md  SKILL.md  app.js  package-lock.json  package.json  server.js
netlify_deployment/: index.html
next_implementation/: .env.example  README.md  middleware.js  package.json
nextjs_deployment/: README.md  package-lock.json
node_implementation/: .env.example  README.md  package-lock.json  package.json  server.js
nodejs_deployment/: .env.example  README.md  package-lock.json  package.json  server.js
scripts/: .test-keypair.json  bot_visitor.py  demo.py  e2e_paywall_debug.py  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/agentpayments_gate/: challenge.py  cookies.py  crypto.py  detection.py  django_gate.py  solana.py
sdk/python/agentpayments_python/: __init__.py  challenge.py  cookies.py  crypto.py  detection.py  django_adapter.py  fastapi_adapter.py  flask_adapter.py  ratelimit.py  solana.py
sdk/python/tests/: test_core.py
(+82 files in other folders)
